--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "chat_app_project",
   "version": "0.1.0",
+  "engines" : {
+    "npm" : ">=8.0.0 <9.0.0",
+    "node" : ">=16.0.0 <17.0.0"
+  },
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
