--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "chat_app_project",
   "version": "0.1.0",
   "engines" : {
-    "npm" : ">=8.0.0 <9.0.0",
-    "node" : ">=16.0.0 <17.0.0"
+    "node" : "14.17.0"
   },
   "private": true,
   "dependencies": {
@@ -19,8 +18,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "postinstall": "patch-package",
     "eject": "react-scripts eject"
